# traverse

./: .gitignore  CMakeLists.txt  README.md
demo/: main.cpp
include/: Logger.h
include/traverse/: Logger.hpp
src/: Logger.cpp
tests/: Logger.test.cpp
